--- a/index.html
+++ b/index.html
@@ -1257,6 +1257,18 @@
             pointer-events: none;
             z-index: 1;
         }
+@media (max-width: 600px) {
+            .title {
+                font-size: 32px;
+            }
+            .flowers {
+                gap: 10px;
+            }
+            .reloadBtn {
+                font-size: 16px;
+                padding: 8px 16px;
+            }
+        }
     </style>
   </head>
 
