--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,8 @@
         }
 @media (max-width: 600px) {
             .title {
-                font-size: 22px;
+                font-size: 19px;
+                margin-bottom: 10px;
             }
             .flowers {
                 gap: 10px;
