--- a/index.html
+++ b/index.html
@@ -1289,6 +1289,9 @@
                 font-size: 19px;
                 margin-bottom: 10px;
             }
+            .counter{
+                font-size: 19px;
+            }
             .flowers {
                 gap: 10px;
             }
@@ -1638,18 +1641,17 @@ function bloomFlower() {
             }
         }
 
-        function animateCounter(target) {
-            let counterElement = document.getElementById("counter");
-            counterElement.style.opacity = "1";
-            let count = 0;
-            let interval = setInterval(() => {
-                count += 10;
-                counterElement.textContent = `Felices ${count} días juntos`;
-                if (count >= target) {
-                    clearInterval(interval);
-                    counterElement.textContent = `Felices ${target} días juntos`;
-                }
-            }, 30);
+        function getDaysSince(startDate) {
+            const start = new Date(startDate);
+            const today = new Date();
+            const diffTime = today - start;
+            return Math.floor(diffTime / (1000 * 60 * 60 * 24));
+        }
+
+        function updateCounter() {
+            const startDate = "2021-07-01"; // Cambia esta fecha de inicio
+            const daysPassed = getDaysSince(startDate);
+            document.getElementById("counter").textContent = `Felices ${daysPassed} días juntos`;
         }
         function startFireworks() {
             const canvas = document.getElementById("fireworksCanvas");
@@ -1706,7 +1708,7 @@ function bloomFlower() {
             animateFireworks();
             
         }
-            
+       document.addEventListener("DOMContentLoaded", updateCounter);
     </script>
   </body>
 </html>
